[Build] Add support for running native-image